# kaiten-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
deploy/: .env.chatgpt-tunnel.example  .env.port.example  .env.production.example  Caddyfile  bootstrap-host.sh  chatgpt-tunnel.sh  deploy.sh  docker-compose.chatgpt-tunnel.yml  docker-compose.port.yml  docker-compose.prod.yml  verify-chatgpt-oauth.py
docs/: deployment.md
skills/kaiten-audit/: SKILL.md
skills/kaiten-deploy/: SKILL.md
skills/kaiten-heavy-data/: SKILL.md
skills/kaiten-metrics/: SKILL.md
skills/managing-kaiten/: PROSEMIRROR.md  SKILL.md  TOOLS_REFERENCE.md  WORKFLOWS.md
src/kaiten_mcp/: CLAUDE.md  auth.py  client.py  http_server.py  models.py  runtime.py  server.py
src/kaiten_mcp/tools/: audit_and_analytics.py  automations.py  blockers.py  boards.py  card_relations.py  card_types.py  cards.py  charts.py  checklists.py  columns.py  comments.py  compact.py  custom_directories.py  custom_properties.py  documents.py  entity_helpers.py  external_links.py  files.py  lanes.py  members.py  projects.py  roles_and_groups.py  scim.py  service_desk.py  spaces.py  subscribers.py  tags.py  time_logs.py  tree.py  utilities.py  webhooks.py
tests/: .phase6_context_real_world_example.md  Dockerfile.lint  Dockerfile.test  conftest.py  docker-compose.test.yml  helpers.py  test_e2e_expanded.py  test_e2e_scenario.py  test_entity_helpers.py  test_http_oauth_auth.py  test_http_server.py  test_layer1_models.py  test_layer1_registration.py  test_layer3_mcp_server.py  test_layer4_client.py  test_runtime.py
tests/test_layer2_handlers/: conftest.py  test_audit_and_analytics.py  test_automations.py  test_blockers.py  test_boards.py  test_card_relations.py  test_card_types.py  test_cards.py  test_charts.py  test_checklists.py  test_columns.py  test_comments.py  test_compact.py  test_custom_properties.py  test_documents.py  test_error_paths.py  test_external_links.py  test_feature_parity_entities.py  test_files.py  test_lanes.py  test_members.py  test_projects.py  test_roles_and_groups.py  test_server_output.py  test_service_desk.py  test_spaces.py  test_subscribers.py  test_tags.py  test_time_logs.py  test_tree.py  test_utilities.py  test_webhooks.py
