[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaiten-mcp"
version = "0.1.0"
description = "MCP server for Kaiten project management API"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
kaiten-mcp = "kaiten_mcp.server:main"
