[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaiten-mcp"
version = "0.1.0"
description = "MCP server for Kaiten project management API"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["kaiten_mcp"]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "def main",
    "asyncio.run",
    "pragma: no cover",
]

[project.scripts]
kaiten-mcp = "kaiten_mcp.server:main"
